change location of app.js to root

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 				<!-- <div class="frame__content">QO</div> -->
 			</div>
 		</main>
-		<script src="js/app.js"></script>
+		<script src="app.js"></script>
 	</body>
 </html>
