update values for threshold values, add comments for important section of code

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 		<main>
 			<div class="message">Tilt your phone to see the effect.</div>
 			<div class="frame">
+
+				<!-- image url & effect threshold values -->
 				<div 
 					id="gl" 
 					data-imageOriginal="kinetic-elite.png" 
 					data-imageDepth="kinetic-elite-depth-map.png" `
-					data-horizontalThreshold="20" 
-					data-verticalThreshold="10">
+					data-horizontalThreshold="200" 
+					data-verticalThreshold="50">
 				</div>
 				<div class="frame__title-wrap">
 					<p class="frame__tagline">Move your mouse around.</a></p>
